--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     </tr>
     <tr>
         <td>02</td>
-        <td></td>
-        <td></td>
+        <td>Le Kim Phung</td>
+        <td>Student1225948</td>
     </tr>
     <tr>
         <td>03</td>
