--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     </tr>
     <tr>
         <td>03</td>
-        <td></td>
-        <td></td>
+        <td>Dinh Thi Thanh Tien</td>
+        <td>Student1225215</td>
     </tr>
     <tr>
         <td>04</td>
