--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     </tr>
     <tr>
         <td>04</td>
-        <td></td>
-        <td></td>
+        <td>Dinh Thi Thanh Thuy</td>
+        <td>Student1225216</td>
     </tr>
     </tbody></table>
 
