--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
     </tr>
     <tr>
         <td>03</td>
-        <td>Dinh Thi Thanh Tien</td>
+        <td><img src="https://scontent.fsgn2-3.fna.fbcdn.net/v/t1.0-9/s960x960/65269365_873233416367469_8328075783197163520_o.jpg?_nc_cat=110&_nc_ohc=nfbMonniL1cAQnBBKwdwIAItJluOobZCkKKYa30sgVtfZqsbGrfswNZQg&_nc_ht=scontent.fsgn2-3.fna&oh=81699d697a8f3062304436313adb06c7&oe=5E87EB2B" width="50px">Dinh Thi Thanh Tien</td>
+
         <td>Student1225215</td>
     </tr>
     <tr>
