--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </tr>
     <tr>
         <td>02</td>
-        <td>Le Kim Phung</td>
+        <td><img src="https://scontent.fsgn5-6.fna.fbcdn.net/v/t1.0-9/54728371_2321899374763632_7129017194435837952_n.jpg?_nc_cat=109&_nc_ohc=kl6e9i1kHggAQkh_ZnA5FzUsHKUL-g3SbVzx7iWDla6jFMfxLloUbUVIw&_nc_ht=scontent.fsgn5-6.fna&oh=4b5e05693101e9dfdf45e293564aca19&oe=5E8AB91C"style="width:50px;height:50px; border-radius:50%;vertical-align:middle">Le Kim Phung </td>
         <td>Student1225948</td>
     </tr>
     <tr>
