--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <tr>
 
         <td>01</td>
-        <td> <img src="https://scontent.fsgn5-5.fna.fbcdn.net/v/t1.0-9/49686327_562008707647309_1742604653033422848_n.jpg?_nc_cat=100&_nc_ohc=pbldttZXf4AAQn-h8d3OgPfVB7nRmaAGBEa_LrC-JZytSgJqb0zdhVh_A&_nc_ht=scontent.fsgn5-5.fna&oh=beedf309c56ad34c66b5a73ac235eba1&oe=5E4AE812"style="width:50px;height:80px;" >Nguyen Thi Lam Duyen</td>
+        <td> <img src="https://scontent.fsgn5-5.fna.fbcdn.net/v/t1.0-9/49686327_562008707647309_1742604653033422848_n.jpg?_nc_cat=100&_nc_ohc=pbldttZXf4AAQn-h8d3OgPfVB7nRmaAGBEa_LrC-JZytSgJqb0zdhVh_A&_nc_ht=scontent.fsgn5-5.fna&oh=beedf309c56ad34c66b5a73ac235eba1&oe=5E4AE812"style="width:50px;" >Nguyen Thi Lam Duyen</td>
 
         <td>None</td>
     </tr>
