--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
             width: 50%;
             border: 1px solid black;
             border-collapse: collapse;
+            background: darkgrey;
         }
     </style>
 </head>
@@ -29,7 +30,7 @@
     </tr>
     <tr>
         <td>03</td>
-        <td><img src="https://scontent.fsgn2-3.fna.fbcdn.net/v/t1.0-9/s960x960/65269365_873233416367469_8328075783197163520_o.jpg?_nc_cat=110&_nc_ohc=nfbMonniL1cAQnBBKwdwIAItJluOobZCkKKYa30sgVtfZqsbGrfswNZQg&_nc_ht=scontent.fsgn2-3.fna&oh=81699d697a8f3062304436313adb06c7&oe=5E87EB2B" width="50px">Dinh Thi Thanh Tien</td>
+        <td><img src="https://scontent.fsgn2-3.fna.fbcdn.net/v/t1.0-9/s960x960/65269365_873233416367469_8328075783197163520_o.jpg?_nc_cat=110&_nc_ohc=nfbMonniL1cAQnBBKwdwIAItJluOobZCkKKYa30sgVtfZqsbGrfswNZQg&_nc_ht=scontent.fsgn2-3.fna&oh=81699d697a8f3062304436313adb06c7&oe=5E87EB2B" style="width:50px; border-radius:50%; float:left;vertical-align:middle">Dinh Thi Thanh Tien</td>
 
         <td>Student1225215</td>
     </tr>
