--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
         <td>None</td>
         <td>
             <a href="https://github.com/lamduye2411/resume-duyen">view source</a>
-           
+            <br>
+            <a href="git%20clone/index.html">open</a>
         </td>
     </tr>
     <tr>
