--- a/index.html
+++ b/index.html
@@ -47,5 +47,9 @@
         <td>04</td>
         <td> <img src="https://scontent.fsgn2-2.fna.fbcdn.net/v/t1.0-9/p720x720/75419042_1296472810532290_8532554872602492928_o.jpg?_nc_cat=102&_nc_ohc=DFFPj3QkQgsAQkk1tDkygu_Wsdi0IVR9RGrDvMIctQX1xMeEOy8bYQRDA&_nc_ht=scontent.fsgn2-2.fna&oh=ab7c59e80dfa1529e9e56c30a050ed96&oe=5E474798" style="width: 30px; border-radius: 50%;"> Dinh Thi Thanh Thuy </td>
         <td>Student1225216</td>
+        <td>
+            <a href="https://github.com/Thanhthuy105/RESUME-Thuy"> View Source</a>
+            <a href="D:/thuy/resume.html"></a>
+        </td>
     </tr>
     </tbody></table>
