--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
         <td>Student1225948</td>
         <td>
             <a href="https://github.com/KimPhung259/resumse-Phung">view source</a>
+            <br>
+            <a href="resume/resumse-Phung/resume.html">open</a>
         </td>
     </tr>
     <tr>
