--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <td>Student1225216</td>
         <td>
             <a href="https://github.com/Thanhthuy105/RESUME-Thuy"> View Source</a>
-            <a href="D:/thuy/resume.html"></a>
+            <a href="D:/thuy/resume.html"> Open</a>
         </td>
     </tr>
     </tbody></table>
