--- a/resume/git_cloned/resume.html
+++ b/resume/git_cloned/resume.html
@@ -11,32 +11,41 @@
 </head>
 <style>
     body * {
-        border: .1px solid lightskyblue;
+        border: .1px solid black;
     }
 </style>
 <body>
 
 <body>
 <div class="container">
-    <div class="row">
+    <div class="row" style="background: #F2F2F2">
         <div class="col-sm-2">
-            <img src="https://scontent.fsgn5-4.fna.fbcdn.net/v/t1.0-9/p720x720/75419042_1296472810532290_8532554872602492928_o.jpg?_nc_cat=102&_nc_ohc=bvFVUtZtgfIAQnWidgn4XluSBQ5FDnnp-LHLnkKm6ngU51Fe_vWqVqGaQ&_nc_ht=scontent.fsgn5-4.fna&oh=5d812ebc9b6434c57cd2dd678b3ac541&oe=5E474798" width="100px" style="">
+            <img src="https://scontent.fsgn5-4.fna.fbcdn.net/v/t1.0-9/p720x720/75419042_1296472810532290_8532554872602492928_o.jpg?_nc_cat=102&_nc_ohc=bvFVUtZtgfIAQnWidgn4XluSBQ5FDnnp-LHLnkKm6ngU51Fe_vWqVqGaQ&_nc_ht=scontent.fsgn5-4.fna&oh=5d812ebc9b6434c57cd2dd678b3ac541&oe=5E474798" width="100%" style="border-radius:6% ">
         </div>
         <div class="col-sm-10">
-            <div> DINH THI THANH THUY </div>
+            <div style="padding: 5px;font-size: 15px; text-transform: uppercase;">Software Engineer</div>
+            <div style="font-size: 25px;padding: 5px;"> DINH THI THANH THUY </div>
+            <div style="padding: 5px;font-size: 15px;"> Engineer</div>
+            <div style="font-size: 12px;">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt</div>
         </div>
     </div>
     <div class="row">
         <div class="col-sm-2 leftgruop">
             <div class="container">
                 <div class="row">
-                    <div class="col-sm-12"> Telephone Number</div>
+                    <div class="col-sm-12"> Contact: </div>
                 </div>
-                <div class="row">
-                    <div class="col-sm-12"> Email</div>
+                <div class="row"style="font-size: 12px;">
+                    <div class="col-sm-12" ></div>
+                    <img src="https://1.bp.blogspot.com/-a6_Ph3QzP-Y/U2Lkra_ZNHI/AAAAAAAAG0s/uGVYVsWa9TQ/s1600/envelope-emoticon.png"width="20px;"> thuy.dtt06@aptechlearning.edu.vn
                 </div>
-                <div class="row">
-                    <div class="col-sm-12"> Adress</div>
+                <div class="row"style="font-size: 12px;">
+                    <div class="col-sm-12"></div>
+                    <img src="https://3.bp.blogspot.com/-Nggtwg4DGrU/U2LkxsuJ_6I/AAAAAAAAG00/4yT5a7Qzf-A/s1600/telephone-emoticon.png"width="20px;" > 0984995527
+                </div>
+                <div class="row"style="font-size: 12px;">
+                    <div class="col-sm-12"></div>
+                    <img src="https://4.bp.blogspot.com/-yzw0W-9riyk/U25csUI9a-I/AAAAAAAAHpA/MYR6JTp4Gqw/s1600/house-symbol.png"width="20px;" > 131/11, đường 4,phường Trường Thạnh, quận 9, thành phố Hồ Chí Minh.
                 </div>
             </div>
         </div>
@@ -44,7 +53,7 @@
         <div class="col-sm-10 rightgruop">
             <div class="comtainer-fluid">
                 <div class="row">
-                    <div class="col-sm-12"> EP</div>
+                    <div class="col-sm-12"> EXPERIENCE</div>
                 </div>
                 <div class="row">
                     <div class="col-sm-12"> EDUCATION </div>
