--- a/resume/git_cloned/resume.html
+++ b/resume/git_cloned/resume.html
@@ -24,7 +24,7 @@
         </div>
         <div class="col-sm-10">
             <div style="padding: 5px;font-size: 15px; text-transform: uppercase;">Software Engineer</div>
-            <div style="font-size: 25px;padding: 5px;"> DINH THI THANH THUY </div>
+            <div style="font-size: 25px;padding: 5px;"><b> ĐINH THỊ THANH THỦY </b></div>
             <div style="padding: 5px;font-size: 15px;"> Engineer</div>
             <div style="font-size: 12px;">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt</div>
         </div>
@@ -33,7 +33,7 @@
         <div class="col-sm-2 leftgruop">
             <div class="container">
                 <div class="row">
-                    <div class="col-sm-12"> Contact: </div>
+                    <div class="col-sm-12"> <b> Contact:</b> </div>
                 </div>
                 <div class="row"style="font-size: 12px;">
                     <div class="col-sm-12" ></div>
@@ -53,10 +53,13 @@
         <div class="col-sm-10 rightgruop">
             <div class="comtainer-fluid">
                 <div class="row">
-                    <div class="col-sm-12"> EXPERIENCE</div>
+                    <div class="col-sm-12"><b>EXPERIENCE:</b></div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-12"> EDUCATION </div>
+                    <div class="col-sm-12"><b>EDUCATION : </b></div>
+                    <div class="col-sm-12">
+                        <div>2016-2019 High School Graduation : THPT Long Truong </div>
+                        <div>2019-2022 Programmer certificate : ApTech </div>
                 </div>
             </div>
         </div>
