--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en"><head>
     <style>
-        table, th, td {
-            width: 50%;
-            border: 1px solid black;
+         th, td {
+            width: 40%;
             border-collapse: collapse;
             background: darkgrey;
         }
+        table {
+            width: 100%;
+        }
+
     </style>
 </head>
 <body><h2><mark>GROUP:PlayBoy</mark></h2>
@@ -42,8 +45,11 @@
     <tr>
         <td>03</td>
         <td><img src="https://scontent.fsgn2-3.fna.fbcdn.net/v/t1.0-9/s960x960/65269365_873233416367469_8328075783197163520_o.jpg?_nc_cat=110&_nc_ohc=nfbMonniL1cAQnBBKwdwIAItJluOobZCkKKYa30sgVtfZqsbGrfswNZQg&_nc_ht=scontent.fsgn2-3.fna&oh=81699d697a8f3062304436313adb06c7&oe=5E87EB2B" style="width:100px; border-radius:50%; float:left;vertical-align:middle">Dinh Thi Thanh Tien</td>
-
         <td>Student1225215</td>
+        <td>
+            <a href="https://github.com/ThanhTien1995/ResumeTien"> View source</a>
+            <a href=""></a>
+        </td>
     </tr>
     <tr>
         <td>04</td>
