--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     </style>
 </head>
-<body><h2><mark>GROUP:PlayBoy</mark></h2>
+<body><h2 style="text-align: center; "><mark>GROUP:PlayBoy</mark></h2>
 <table>
     <tbody><tr>
         <th><strong> STT </strong></th>
