--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <td>Student1225216</td>
         <td>
             <a href="https://github.com/Thanhthuy105/RESUME-Thuy"> View Source</a>
-            <a href="D:\Thuy\c1908g1-playboy\resume\git_cloned\resume.html"> Open</a>
+            <a href="D:/Thuy/c1908g1-playboy/resume/git_cloned/RESUME-Thuy/resume.html"> Open</a>
         </td>
     </tr>
     </tbody></table>
