--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <td>Student1225215</td>
         <td>
             <a href="https://github.com/ThanhTien1995/ResumeTien"> View source</a>
-            <a href=""></a>
+            <a href="ResumeTien/resume.html">Open</a>
         </td>
     </tr>
     <tr>
