--- a/index.html
+++ b/index.html
@@ -4,36 +4,42 @@
          th, td {
             width: 40%;
             border-collapse: collapse;
-            background: darkgrey;
+            background: lightgray;
         }
-        table {
-            width: 100%;
+        table.dsn {
+            width: 50%;
+            margin-left: auto;
+            margin-right: auto;
         }
+        .stt {
+            width: 50px;
+        }
+
 
     </style>
 </head>
 <body><h2 style="text-align: center; "><mark>GROUP:PlayBoy</mark></h2>
-<table>
+<table class="dsn">
     <tbody><tr>
-        <th><strong> STT </strong></th>
+        <th class="stt"><strong> STT </strong></th>
         <th><strong> NAME </strong></th>
         <th><strong> STUDENT CODE </strong></th>
         <th><strong> RESUME </strong></th>
     </tr>
     <tr>
 
-        <td>01</td>
+        <td class="stt">01</td>
         <td> <img src="https://scontent.fsgn5-5.fna.fbcdn.net/v/t1.0-9/49686327_562008707647309_1742604653033422848_n.jpg?_nc_cat=100&_nc_ohc=pbldttZXf4AAQn-h8d3OgPfVB7nRmaAGBEa_LrC-JZytSgJqb0zdhVh_A&_nc_ht=scontent.fsgn5-5.fna&oh=beedf309c56ad34c66b5a73ac235eba1&oe=5E4AE812"style="width:100px;" >Nguyen Thi Lam Duyen</td>
 
         <td>None</td>
         <td>
             <a href="https://github.com/lamduye2411/resume-duyen">view source</a>
             <br>
-            <a href="git%20clone/index.html">open</a>
+            <a href="resume/git_cloned/resume.html">open</a>
         </td>
     </tr>
     <tr>
-        <td>02</td>
+        <td class="stt">02</td>
         <td><img src="https://scontent.fsgn5-6.fna.fbcdn.net/v/t1.0-9/54728371_2321899374763632_7129017194435837952_n.jpg?_nc_cat=109&_nc_ohc=kl6e9i1kHggAQkh_ZnA5FzUsHKUL-g3SbVzx7iWDla6jFMfxLloUbUVIw&_nc_ht=scontent.fsgn5-6.fna&oh=4b5e05693101e9dfdf45e293564aca19&oe=5E8AB91C"style="width:100px;height:100px; border-radius:50%;vertical-align:middle">Le Kim Phung </td>
         <td>Student1225948</td>
         <td>
@@ -43,7 +49,7 @@
         </td>
     </tr>
     <tr>
-        <td>03</td>
+        <td class="stt">03</td>
         <td><img src="https://scontent.fsgn2-3.fna.fbcdn.net/v/t1.0-9/s960x960/65269365_873233416367469_8328075783197163520_o.jpg?_nc_cat=110&_nc_ohc=nfbMonniL1cAQnBBKwdwIAItJluOobZCkKKYa30sgVtfZqsbGrfswNZQg&_nc_ht=scontent.fsgn2-3.fna&oh=81699d697a8f3062304436313adb06c7&oe=5E87EB2B" style="width:100px; border-radius:50%; float:left;vertical-align:middle">Dinh Thi Thanh Tien</td>
         <td>Student1225215</td>
         <td>
@@ -52,7 +58,7 @@
         </td>
     </tr>
     <tr>
-        <td>04</td>
+        <td class="stt">04</td>
         <td> <img src="https://scontent.fsgn2-2.fna.fbcdn.net/v/t1.0-9/p720x720/75419042_1296472810532290_8532554872602492928_o.jpg?_nc_cat=102&_nc_ohc=DFFPj3QkQgsAQkk1tDkygu_Wsdi0IVR9RGrDvMIctQX1xMeEOy8bYQRDA&_nc_ht=scontent.fsgn2-2.fna&oh=ab7c59e80dfa1529e9e56c30a050ed96&oe=5E474798" style="width: 30px; border-radius: 50%;"> Dinh Thi Thanh Thuy </td>
         <td>Student1225216</td>
         <td>
