--- a/resume/git_cloned/resume.html
+++ b/resume/git_cloned/resume.html
@@ -11,7 +11,7 @@
 </head>
 <style>
     body * {
-        border: .1px solid black;
+        border: .1px solid lightblue;
     }
 </style>
 <body>
@@ -20,13 +20,13 @@
 <div class="container">
     <div class="row" style="background: #F2F2F2">
         <div class="col-sm-2">
-            <img src="https://scontent.fsgn5-4.fna.fbcdn.net/v/t1.0-9/p720x720/75419042_1296472810532290_8532554872602492928_o.jpg?_nc_cat=102&_nc_ohc=bvFVUtZtgfIAQnWidgn4XluSBQ5FDnnp-LHLnkKm6ngU51Fe_vWqVqGaQ&_nc_ht=scontent.fsgn5-4.fna&oh=5d812ebc9b6434c57cd2dd678b3ac541&oe=5E474798" width="100%" style="border-radius:6% ">
+            <img src="https://scontent.fsgn2-2.fna.fbcdn.net/v/t1.0-9/49686327_562008707647309_1742604653033422848_n.jpg?_nc_cat=100&_nc_ohc=Sci7vneDZoYAQkYxKCI850s1wt2emd9tAfn52rwyOtMyiQH1NUpqTp1KQ&_nc_ht=scontent.fsgn2-2.fna&oh=1c007be436fca2bd606d519a06e5d89b&oe=5E727512" width="200px" >
         </div>
         <div class="col-sm-10">
-            <div style="padding: 5px;font-size: 15px; text-transform: uppercase;">Software Engineer</div>
-            <div style="font-size: 25px;padding: 5px;"><b> ĐINH THỊ THANH THỦY </b></div>
-            <div style="padding: 5px;font-size: 15px;"> Engineer</div>
-            <div style="font-size: 12px;">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt</div>
+            <div style="padding: 10px;font-size: 15px; text-transform: uppercase;">Software Engineer</div>
+            <div style="font-size: 25px;padding: 5px;"><b> NGUYỄN THỊ LÂM DUYÊN </b></div>
+            <div style="padding: 10px;font-size: 15px;"> Engineer</div>
+            <div style="font-size: 15px;">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt</div>
         </div>
     </div>
     <div class="row">
@@ -37,15 +37,15 @@
                 </div>
                 <div class="row"style="font-size: 12px;">
                     <div class="col-sm-12" ></div>
-                    <img src="https://1.bp.blogspot.com/-a6_Ph3QzP-Y/U2Lkra_ZNHI/AAAAAAAAG0s/uGVYVsWa9TQ/s1600/envelope-emoticon.png"width="20px;"> thuy.dtt06@aptechlearning.edu.vn
+                    <img src="https://1.bp.blogspot.com/-a6_Ph3QzP-Y/U2Lkra_ZNHI/AAAAAAAAG0s/uGVYVsWa9TQ/s1600/envelope-emoticon.png"width="20px;" >siiu.siu2411@gmail.com
                 </div>
                 <div class="row"style="font-size: 12px;">
                     <div class="col-sm-12"></div>
-                    <img src="https://3.bp.blogspot.com/-Nggtwg4DGrU/U2LkxsuJ_6I/AAAAAAAAG00/4yT5a7Qzf-A/s1600/telephone-emoticon.png"width="20px;" > 0984995527
+                    <img src="https://3.bp.blogspot.com/-Nggtwg4DGrU/U2LkxsuJ_6I/AAAAAAAAG00/4yT5a7Qzf-A/s1600/telephone-emoticon.png"width="20px;" >0568120962
                 </div>
                 <div class="row"style="font-size: 12px;">
                     <div class="col-sm-12"></div>
-                    <img src="https://4.bp.blogspot.com/-yzw0W-9riyk/U25csUI9a-I/AAAAAAAAHpA/MYR6JTp4Gqw/s1600/house-symbol.png"width="20px;" > 131/11, đường 4,phường Trường Thạnh, quận 9, thành phố Hồ Chí Minh.
+                    <img src="https://4.bp.blogspot.com/-yzw0W-9riyk/U25csUI9a-I/AAAAAAAAHpA/MYR6JTp4Gqw/s1600/house-symbol.png"width="20px;" >87, Khu phố Long Sơn, Phường Long Bình, Quận 9,TPHCM
                 </div>
             </div>
         </div>
@@ -58,13 +58,35 @@
                 <div class="row">
                     <div class="col-sm-12"><b>EDUCATION : </b></div>
                     <div class="col-sm-12">
-                        <div>2016-2019 High School Graduation : THPT Long Truong </div>
+                        <div>2016-2019 High School Graduation : Nguyễn Văn Tăng </div>
                         <div>2019-2022 Programmer certificate : ApTech </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
+    <div class="row">
+        <div class="col-sm-3 leftgruop">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-12"> <b> Skill Professional:</b> </div>
+
+                    <div class="col-sm-6">C</div>
+                    <div class="col-sm-6">
+                        <div class="progress" style="height: 20px;">
+                            <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-6">HTML</div><div class="col-sm-6">23222</div>
+                    <div class="col-sm-6">CSS</div><div class="col-sm-6">23222</div>
+                    <div class="col-sm-6">Javascript</div><div class="col-sm-6">23222</div>
+                    <div class="col-sm-6">Bootstrap</div><div class="col-sm-6">23222</div>
+                    <div class="col-sm-6">Jquery</div><div class="col-sm-6">23222</div>
+
+                </div>
+            </div>
+        </div>
 
 
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
